tests/build/cases/widget_new/incorrect_arg_type3.stderr
error[E0277]: the trait bound `bool: IntoVar<GradientStops>` is not satisfied
 --> cases/widget_new/incorrect_arg_type3.rs:7:13
  |
7 |       let _ = Wgt! {
  |  _____________^
8 | |         background_gradient = 0.deg(), true
  | |         ------------------- required by a bound introduced by this call
9 | |     };
  | |_____^ the trait `IntoVar<GradientStops>` is not implemented for `bool`
  |
  = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `background_gradient::__new__`
 --> $WORKSPACE/zero-ui/src/properties/visual.rs
  |
  | pub fn background_gradient(child: impl UiNode, axis: impl IntoVar<LinearGradientAxis>, stops: impl IntoVar<GradientStops>) -> impl UiNode {
  |                                                                                                    ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `background_gradient::__new__`
